--- a/about/index.html
+++ b/about/index.html
@@ -1,84 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!--user-scalable=no-->
-    <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Motion Square Music Demo</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/ico/favicon.ico">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <script src="assets/js/modernizr.js"></script>
-</head>
-
-<body>
-
-<!-- Fixed navbar -->
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html">MOTION SQUARE MUSIC</a>
-        </div>
-        <div class="navbar-collapse collapse navbar-right">
-            <ul class="nav navbar-nav">
-                <li><a href="index.html">HOME</a></li>
-                <li class="active"><a href="about.html">ABOUT</a></li>
-                <li><a href="services.html">SERVICE &amp; PRICING</a></li>
-                <li><a href="showcase.html">SHOWCASE</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">SEE MORE <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="collection.html">MUSIC COLLECTION</a></li>
-                        <li><a href="freestuff.html">FREE STUFFS</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</div>
-
-<!-- *****************************************************************************************************************
- BLUE WRAP
- ***************************************************************************************************************** -->
+---
+layout: default
+title: About us
+active: about
+---
 <div id="blue">
     <div class="container">
         <div class="row">
-            <h3>About Us</h3>
+            <h3>ABOUT US</h3>
         </div><!-- /row -->
     </div><!-- /container -->
-</div><!-- /blue -->
+</div>
 
-
-<!-- *****************************************************************************************************************
- AGENCY ABOUT
- ***************************************************************************************************************** -->
-
+<!-- AGENCY ABOUT -->
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-6">
-            <img class="img-responsive" src="assets/img/agency.jpg" alt="">
+            <img class="img-responsive" src="{{"/assets/img/agency.jpg" | prepend:site.url}}" alt="">
         </div>
 
         <div class="col-lg-6">
@@ -99,18 +36,15 @@
             </blockquote>
         </div>
     </div><!--/row -->
-</div><!--/container -->
+</div>
 
-<!-- *****************************************************************************************************************
- TEAM MEMBERS
- ***************************************************************************************************************** -->
-
+<!-- TEAM MEMBERS -->
 <div class="container mtb">
     <div class="row centered right">
         <h3 class="mb">MEET OUR TEAM</h3>
         <div class="composerItem col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="he-wrap tpl6">
-                <img class="img-rounded" width="300px" src="assets/img/team/phil_aboutpg.jpg" alt="">
+                <img class="img-rounded" width="300px" src="{{"/assets/img/team/phil_aboutpg.jpg" | prepend: site.url}}" alt="">
 
                 <div class="he-view">
                     <div class="bg a0" data-animate="fadeIn">
@@ -135,7 +69,7 @@
 
         <div class="composerItem col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <div class="he-wrap tpl6">
-                <img class="img-rounded" width="300px" src="assets/img/team/bill2_aboutpg.jpg" alt="">
+                <img class="img-rounded" width="300px" src="{{ "/assets/img/team/bill2_aboutpg.jpg" | prepend: site.url }}" alt="">
 
                 <div class="he-view">
                     <div class="bg a0" data-animate="fadeIn">
@@ -156,58 +90,4 @@
                 Production ที่ College-Conservatory of Music University of Cincinnati</p>
         </div><!--/col-lg-3 -->
     </div><!--/row -->
-</div><!--/container -->
-
-<!-- *****************************************************************************************************************
- FOOTER
- ***************************************************************************************************************** -->
-<div id="footerwrap">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <h4>Contact Us</h4>
-                <div class="hline-w"></div>
-                <a class="btn btn-success" href="mailto:stockmusicth@gmail.com">stockmusicth@gmail.com</a>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <h4>Subscribe</h4>
-                <div class="hline-w"></div>
-                <div id="mc_embed_signup">
-                    <form action="http://motionsquaremusic.us3.list-manage1.com/subscribe/post?u=7e6e5e435a36bf94e237157f3&amp;id=96565976df"
-                          method="post"
-                          id="mc-embedded-subscribe-form"
-                          name="mc-embedded-subscribe-form"
-                          class="form-inline"
-                          target="_blank"
-                          novalidate="">
-                        <div class="form-group">
-                            <label for="mce-EMAIL"></label>
-                            <input type="email" value="" name="EMAIL" class="form-control email" id="mce-EMAIL" placeholder="Enter email address" required="">
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;">
-                                <input type="text" name="b_7e6e5e435a36bf94e237157f3_96565976df" value="">
-                            </div>
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-info">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div><!--/row -->
-    </div><!--/container -->
-</div><!--/footerwrap -->
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/retina-1.1.0.js"></script>
-<script src="assets/js/jquery.hoverdir.js"></script>
-<script src="assets/js/jquery.hoverex.min.js"></script>
-<script src="assets/js/jquery.prettyPhoto.js"></script>
-<script src="assets/js/jquery.isotope.min.js"></script>
-<script src="assets/js/custom.js"></script>
-
-
-</body>
-</html>
+</div>
