--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@ title: Oops :(
 ---
 
 <div class="container mtb ">
+    <img class="img-responsive" src="{{"/assets/img/cage/404-2.gif" | prepend:site.url}}" alt="">
 	<h1>Oops!</h1>
 	<h1>The page you are looking for is not found. :(</h1>
 </div>
