--- a/404.html
+++ b/404.html
@@ -1,10 +1,47 @@
 ---
 layout: default
 title: Oops :(
+cage: socageee
 ---
-
 <div class="container mtb ">
-    <img class="img-responsive" src="{{"/assets/img/cage/404-2.gif" | prepend:site.url}}" alt="">
-	<h1>Oops!</h1>
-	<h1>The page you are looking for is not found. :(</h1>
+	<div class="row">
+		<div class="col-lg-4">    
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+		<div class="col-lg-4">
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+		<div class="col-lg-4">
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+	</div>
+
+	<br/>
+
+	<div class="row">
+		<div class="col-lg-4">    
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+		<div class="col-lg-4">
+				<h3>Oops!</h3>
+				<h3>The page you are looking for is not found. :(</h3>
+		</div>
+		<div class="col-lg-4">
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+	</div>
+
+	<br/>
+
+	<div class="row">
+		<div class="col-lg-4">    
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+		<div class="col-lg-4">
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+		<div class="col-lg-4">
+			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+		</div>
+	</div>
 </div>
