--- a/404.html
+++ b/404.html
@@ -6,13 +6,13 @@ cage: socageee
 <div class="container mtb ">
 	<div class="row">
 		<div class="col-lg-4">    
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-0.gif" alt="">
 		</div>
 		<div class="col-lg-4">
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-3.gif" alt="">
 		</div>
 		<div class="col-lg-4">
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-1.gif" alt="">
 		</div>
 	</div>
 
@@ -20,14 +20,14 @@ cage: socageee
 
 	<div class="row">
 		<div class="col-lg-4">    
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-2.gif" alt="">
 		</div>
 		<div class="col-lg-4">
 				<h3>Oops!</h3>
 				<h3>The page you are looking for is not found. :(</h3>
 		</div>
 		<div class="col-lg-4">
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-2.gif" alt="">
 		</div>
 	</div>
 
@@ -35,13 +35,13 @@ cage: socageee
 
 	<div class="row">
 		<div class="col-lg-4">    
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-2.gif" alt="">
 		</div>
 		<div class="col-lg-4">
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-0.gif" alt="">
 		</div>
 		<div class="col-lg-4">
-			<img class="img-responsive" src="{{ "/assets/img/cage/404-" | prepend:site.url }}{% randomnumbers 4 %}{{'.gif' }}" alt="">
+			<img class="img-responsive" src="http://motionsquaremusic.github.io/assets/img/cage/404-2.gif" alt="">
 		</div>
 	</div>
 </div>
