add photo, icon

--- a/index.html
+++ b/index.html
@@ -214,25 +214,25 @@ active: index
 
         <div class="row centered">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-heart-o"></i>
+                <i class="fa fa-laptop"></i>
                 <h4>Stock Music</h4>
 
                 <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง (Song) เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-flask"></i>
+                <i class="fa fa-refresh"></i>
                 <h4>Loop Music</h4>
 
                 <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-trophy"></i>
+                <i class="fa fa-music"></i>
                 <h4>Original Score</h4>
 
                 <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-trophy"></i>
+                <i class="fa fa-file-audio-o"></i>
                 <h4>Mock Up Score</h4>
 
                 <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
