--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ active: index
                 <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา</p>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                <i class="fa fa-file-audio-o"></i>
+                <i class="fa fa-youtube-play"></i>
                 <h4>Mock Up Score</h4>
 
                 <p>เปลี่ยนจาก MIDI, Score ให้กลายเป็นเสียงเสมือนจริง</p>
@@ -251,11 +251,8 @@ active: index
             <div class="col-lg-8 col-lg-offset-2">
                 <i class="fa fa-comment-o"></i>
 
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-                    leap into electronic typesetting, remaining essentially unchanged.</p>
-                <h4><br/>John Williams</h4>
+                <p>With animated film, you have to create the sonic world; there's nothing there. You get to color things in more and you're allowed to overreach yourself a little bit more, and it's great fun.</p>
+                <h4><br/>Hans Zimmer</h4>
 
                 <p>Music Composer</p>
             </div>
