--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@ active: index
             <div class="col-lg-8 col-lg-offset-2">
                 <i class="fa fa-comment-o"></i>
 
-                <p>With animated film, you have to create the sonic world; there's nothing there. You get to color things in more and you're allowed to overreach yourself a little bit more, and it's great fun.</p>
-                <h4><br/>Hans Zimmer</h4>
+                <p>“A film composer needs to understand that this is not music for its own sake, but it is music for a collaborative art. For me, a great film composer is always someone who not only has musical talent, but also a talent for telling a story with music. This is what makes film scoring a unique musical expression. It’s all about how the composer can assist the telling of the story as well as write great music.”</p>
+                <h4><br/>Alan Silvestri</h4>
 
                 <p>Music Composer</p>
             </div>
