--- a/index.html
+++ b/index.html
@@ -41,170 +41,115 @@ active: index
     </div><!--/row -->
 </div>
 
+
 <div id="portfoliowrap">
-    <h3>OUR MUSIC COLLECTION</h3><p>คลิกเพื่อฟังเพลงในคลังของเรา</p>
+    <h3>OUR MUSIC COLLECTION</h3>
+    <p>คลิกเพื่อฟังเพลงในคลังของเรา</p>
+    <!-- PORTFOLIO SECTION -->
+<div class="container mb">
+    <div id="porfoliocollection" class="center-block text-center">
+        <div class="portfolioitem">
+            <a data-toggle="modal" href="#portfolio-modal-altrock">
+                <img src="{{"/assets/img/portfolio/img-portfolio-altrock-250px.jpg" | prepend: site.url }}"
+                     class="img-responsive contenthover-portfolio">
 
-    <div class="portfolio-centered">
-        <div class="recentitems portfolio">
-            <div class="portfolio-item graphic-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_09.jpg" | prepend: site.url }}" alt="">
+                <div class="contenthover innerdivoverlay">
+                    <h3>Alternative Rock</h3>
+                </div>
+            </a>
+        </div>
+        <div class="portfolioitem">
+            <a data-toggle="modal" href="#portfolio-modal-cinematic">
+                <img src="{{"/assets/img/portfolio/img-portfolio-cinematic-250px.jpg" | prepend: site.url }}"
+                     class="img-responsive contenthover-portfolio">
 
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_09.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
+                <div class="contenthover innerdivoverlay">
+                    <h3>Cinematic</h3>
+                </div>
+            </a>
+        </div>
+        <div class="portfolioitem">
+            <a data-toggle="modal" href="#portfolio-modal-infographics">
+                <img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}"
+                     class="img-responsive contenthover-portfolio">
 
-            <div class="portfolio-item web-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_02.jpg" | prepend: site.url }}" alt="">
+                <div class="contenthover innerdivoverlay">
+                    <h3>Infographics</h3>
+                </div>
+            </a>
+        </div>
+        <div class="portfolioitem">
+            <a data-toggle="modal" href="#portfolio-modal-infographics">
+                <img src="{{"/assets/img/portfolio/img-portfolio-infographics-250px.jpg" | prepend: site.url }}"
+                     class="img-responsive contenthover-portfolio">
 
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_02.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
+                <div class="contenthover innerdivoverlay">
+                    <h3>Infographics</h3>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
 
-            <div class="portfolio-item graphic-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_03.jpg" | prepend: site.url }}" alt="">
+        <!--MODAL-->
+        <div class="modal fade in" id="portfolio-modal-altrock" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title">Alternative Rock</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>ALTERNATIVE ROCK</p><p>
+                        ด้วยความต้องการของทีวีโชว์/รายการวัยรุ่นที่มากขึ้นเรื่อยๆ ทำให้ดนตรีในประเภท Rock ได้ถูกนำไปใช้มากขึ้นเรื่อยๆจนเริ่มเกิดความจำเจ ในอัลบั้ม Alternative Rock จึงรวบรวมดนตรีร็อคในแบบที่เป็น “ทางเลือก” ที่ผลิตโดยศิลปินอิสระสำหรับทุกคนที่ต้องการเพลงร็อคแนวๆ ไม่ซ้ำจำเจ แต่ยังมีความ fresh และ power อยู่ สามารถใช้งานได้หลากหลาย ไม่ว่าจะเป็นงาน TV, หนังสั้น หรือแม้แต่ภาพยนต์</p>
+                        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/27545141&amp;auto_play=false&amp;hide_related=false&amp;visual=true"></iframe><p></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
 
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_03.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
+        <div class="modal fade in" id="portfolio-modal-cinematic" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title">Cinematic</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>CINEMATIC</p><p>
+                        เพลงในอัลบั้ม Cinematic จะ โฟกัสดนตรีประเภท Orchestra ในลักษณะของหนังฮอลลีวู้ดให้ความรู้สึกที่ยิ่งใหญ่และเร้าอารมณ์ ในบางเพลงจะมีส่วนผสมของดนตรีอิเล็กทรอนิคลงไปเพื่อเพิ่มความ Modern ทำให้สามารถนำไปใช้งานได้กว้างขึ้นไปอีก เพลงในอัลบั้ม Cinematic เหมาะเป็นอย่างยิ่งสำหรับภาพยนต์และเทรลเล่อต่างๆไม่ว่าจะเป็นฉากรัก ฉากบู๊ ฉากเดินทาง ฯลฯ </p>
+                        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/26177399&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
 
-            <div class="portfolio-item graphic-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_04.jpg" | prepend: site.url }}" alt="">
+        <div class="modal fade" id="portfolio-modal-infographics" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                        <h4 class="modal-title">Infographic</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>INFOGRAPHICS</p><p>
+                        ปฏิเสธไม่ได้จริงๆว่าในยุคปัจจุบันการนำเสนอในรูปแบบ infographic ได้รับความนิยมเป็นอย่างมาก ด้วยการสื่อสารที่เข้าใจง่ายและเพลิดเพลิน ดนตรีจึงเป็นอีกส่วนที่สำคัญมากๆใน infographic
+                        เพลงในอัลบั้ม Infographics เป็นทางเลือกที่ดีของทุกคนที่กำลังมองหาดนตรีที่มีความง่าย ลงตัว และสามารถ loop (ย้อน) ไปเรื่อยๆเพื่อเพิ่ม/ลดความยาวได้ตามต้องการ เพื่อไปประกอบในวิดีโอ infographic หรือ presentation สำหรับ TV และ Social media ต่างๆ </p>
+                        <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/43906178&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe><p></p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
 
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_04.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-
-            <div class="portfolio-item books">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_05.jpg" | prepend: site.url }}" alt="">
-
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_05.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-
-            <div class="portfolio-item graphic-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_06.jpg" | prepend: site.url }}" alt="">
-
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_06.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-
-            <div class="portfolio-item books">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_07.jpg" | prepend: site.url }}" alt="">
-
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_07.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-
-            <div class="portfolio-item graphic-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_08.jpg" | prepend: site.url }}" alt="">
-
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Graphic Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_08.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-
-            <div class="portfolio-item web-design">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_01.jpg" | prepend: site.url }}" alt="">
-
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Web Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_01.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-
-            <div class="portfolio-item books">
-                <div class="he-wrap tpl6">
-                    <img src="{{"/assets/img/portfolio/portfolio_10.jpg" | prepend: site.url }}" alt="">
-
-                    <div class="he-view">
-                        <div class="bg a0" data-animate="fadeIn">
-                            <h3 class="a1" data-animate="fadeInDown">A Book Design Item</h3>
-                            <a data-rel="prettyPhoto" href="{{"/assets/img/portfolio/portfolio_10.jpg" | prepend: site.url }}" class="dmbutton a2"
-                               data-animate="fadeInUp"><i class="fa fa-search"></i></a>
-                            <a href="freestuffs" class="dmbutton a2" data-animate="fadeInUp"><i
-                                    class="fa fa-link"></i></a>
-                        </div><!-- he bg -->
-                    </div><!-- he view -->
-                </div><!-- he wrap -->
-            </div><!-- end col-12 -->
-        </div><!-- portfolio -->
-    </div><!-- portfolio container -->
 </div>
 
 <!-- SERVICES -->
