--- a/freestuffs/index.html
+++ b/freestuffs/index.html
@@ -23,7 +23,7 @@ active: freestuffs
         <div class="col-lg-6">
         	<p class="text-justify">เพลงฟรีๆจาก <a href="http://www.phil-wc.com/">Phil_wc</a> ถึงสี่อัลบั้มในแนว Ambient, Electronic, Drone, และ Experimental เพลงในอัลบั้มเหล่านี้เคยไปปรากฏในหนังเทศการมาแล้วเช่น The 31st Vancouver Film Festival, Canada, The 56th BFI London Film Festival, Great Britain</p>
 
-            <p class="text-justify">เพื่อใช้ในงานที่ไม่แสวงหากำไร(non-commercial)ทุกประเภทและสามารถนำไปใช้ได้โดยไม่ต้องขออนุญาต โดยมีเงื่อนไขในการใช้ตามสามข้อด้านบน เงื่อนไขรวมไปถึงการนำเพลงไปใช้ในหนังอิสระเพื่อส่งประกวด ได้เช่นกัน
+            <p class="text-justify">เพื่อใช้ในงานที่ไม่แสวงหากำไร(non-commercial)ทุกประเภทและสามารถนำไปใช้ได้โดยไม่ต้องขออนุญาต โดยมีเงื่อนไขในการใช้ตามสามข้อด้านข้าง เงื่อนไขรวมไปถึงการนำเพลงไปใช้ในหนังอิสระเพื่อส่งประกวด ได้เช่นกัน
             <br><b>* หากต้องการนำไปใช้ในงาน commercial โปรดติดต่อเรา</b></p>
             
             <p>ท่านสามารถบริจาคได้ตามใจชอบโดยกรอกราคาหลังกดปุ่มดาวน์โหลดครับ</p>
