--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ active: index
             <a href="about" class="btn btn-theme center-block">Get to know us</a><br>
         </div>
         <div class="col-lg-6">
-            <img class="img-responsive" src="{{"/assets/img/agency.jpg" | prepend: site.url }}" alt="">
+            <img class="img-responsive" src="{{"/assets/img/showcase/show6.jpg" | prepend: site.url }}" alt="">
         </div>
     </div><!--/row -->
 </div>
