--- a/showcase/index.html
+++ b/showcase/index.html
@@ -22,6 +22,8 @@ active: showcase
 					<li data-target="#showcase-carousel" data-slide-to="0" class="active"></li>
 					<li data-target="#showcase-carousel" data-slide-to="1"></li>
 					<li data-target="#showcase-carousel" data-slide-to="2"></li>
+                    <li data-target="#showcase-carousel" data-slide-to="3"></li>
+                    <li data-target="#showcase-carousel" data-slide-to="4"></li>
 				</ol>
 
 				<!-- Wrapper for slides -->
@@ -30,10 +32,16 @@ active: showcase
 						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show4.jpg" | prepend: site.url }}" alt="">
 					</div>
 					<div class="item">
-						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show2.jpg" | prepend: site.url }}" alt="">
+						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show5.jpg" | prepend: site.url }}" alt="">
 					</div>
 					<div class="item">
+						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show7.jpg" | prepend: site.url }}" alt="">
+					</div>
+                    <div class="item">
 						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show3.jpg" | prepend: site.url }}" alt="">
+					</div>
+                    <div class="item">
+						<img class="carousel-image img-responsive" src="{{"/assets/img/showcase/show2.jpg" | prepend: site.url }}" alt="">
 					</div>
 				</div>
 				  <!-- Controls -->
