--- a/services/index.html
+++ b/services/index.html
@@ -8,6 +8,7 @@ active: services
         <div class="row">
             <h3>SERVICE &amp; PRICING</h3>
         </div><!-- /row -->
+         <img id="img-pageheader" class="img-responsive center-block" src="{{"/assets/img/showcase/show5.jpg" | prepend: site.url }}">
     </div><!-- /container -->
 </div>
 
@@ -23,7 +24,7 @@ active: services
     <div class="row">
         <div class="col-lg-6">
 
-            <img class="img-responsive center-block" src="{{"/assets/img/post01.jpg" | prepend: site.url }}">
+            <img class="img-responsive center-block" src="{{"/assets/img/loopmusic.jpg" | prepend: site.url }}">
             <h4>LOOP MUSIC</h4>
 
             <p>ดนตรีที่วนซ้ำได้ เพื่อใช้ในงานเกมส์ วิดีโอ infographic หรืออื่นๆ<br/>คิดราคาตามความยาวลูปดังนี้<br/><br/>20-30
@@ -50,14 +51,14 @@ active: services
         </div>
         <div class="col-lg-6">
             
-            <img class="img-responsive center-block" src="{{"/assets/img/post01.jpg" | prepend: site.url }}">
+            <img class="img-responsive center-block" src="{{"/assets/img/showcase/show8.jpg" | prepend: site.url }}">
             <h4>STOCK MUSIC</h4>
             <p>เช่าดนตรีในรูปแบบจบในหนึ่งเพลง(song)ที่อยู่ใน Library ของเรา เพื่อใช้ในงานโฆษณา เกมส์ ภาพยนต์ และอื่นๆ ราคาสามารถสอบถามได้ที่ stockmusicth@gmail.com</p>
 
             <p>ราคามีการเปลี่ยนแปลงตามขนาดของโปรดักชั่น และวิธีการเผยแพร่ทางสื่อ</p>
             <br>
 
-            <img class="img-responsive center-block" src="{{"/assets/img/post01.jpg" | prepend: site.url }}">    
+            <img class="img-responsive center-block" src="{{"/assets/img/showcase/show1.jpg" | prepend: site.url }}">    
             <h4>ORIGINAL SCORE</h4>
             <p>ประพันธ์ดนตรีขึ้นมาใหม่ ดนตรีประกอบภาพยนต์ เกมส์ หรือสื่อโฆษณา (ที่ไม่ใช่เป็นดนตรี Loop)</p>
 
